<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".framework.ui.AddEditNoteActivity">


    <Button
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/purple_500"
        android:text="@string/apply"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edit_note_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/enter_session_title"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_note_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_note_title_et"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:gravity="start|top"
        android:hint="@string/enter_session_description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/idIVMic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/edit_note_desc_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_baseline_mic_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idIVMic"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/click_on_mic_to_speak"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/idTVOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idIVMic"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/output_will_appear_here"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>